Cleanups in tests - using Java11+ features
- Created JmhUtils to help JMH
- System.Logger usages instead of slf4j
- Fixed some IO leaks in tests - unclosed streams
- XMLUtilsPerformanceTest now uses JMH
- Removed log4j2.properties

Signed-off-by: David Matějček <david.matejcek@omnifish.ee>